<resources>
    <string name="app_name" translatable="false">Data Guard</string>
    <string name="title_activity_settings" translatable="false">SettingsActivity</string>

    <!-- Notifications strings -->
    <string name="suspicious_activity_detected_notification_channel_id" translatable="false">com.schugarkub.dataguard.SuspiciousActivityDetected</string>
    <string name="suspicious_activity_detected_notification_channel_name">Suspicious activity detection</string>
    <string name="suspicious_activity_detected_notification_title">Suspicious activity detected</string>
    <string name="threshold_reached_notification_text">%1$s: Threshold reached</string>
    <string name="threshold_reached_notification_description">Threshold reached</string>
    <string name="high_deviation_notification_text">%1$s: High deviation detected</string>
    <string name="high_deviation_notification_description">High deviation detected</string>
    <string name="network_monitoring_notification_channel_id" translatable="false">com.schugarkub.dataguard.NetworkMonitoring</string>
    <string name="network_monitoring_notification_channel_name">Network monitoring</string>
    <string name="network_monitoring_notification_title">Network monitoring enabled</string>

    <!-- Network type strings -->
    <string name="network_type_wifi" translatable="false">Wi-Fi</string>
    <string name="network_type_mobile">Mobile</string>
    <string name="network_type_unknown">Unknown</string>

    <!-- Bottom navigation strings -->
    <string name="bottom_navigation_applications_list_menu_item_title">Applications</string>
    <string name="bottom_navigation_notifications_journal_menu_item_title">Notifications</string>
    <string name="bottom_navigation_preferences_menu_item_title">Preferences</string>

    <!-- Toolbar strings -->
    <string name="applications_toolbar_title">Applications</string>
    <string name="notifications_toolbar_title">Notifications</string>
    <string name="toolbar_preferences_menu_item_title">Preferences</string>

    <!-- Application card strings -->
    <string name="application_icon_description" translatable="false">Application icon</string>
    <string name="application_rx_bytes" translatable="false">Downloaded data</string>
    <string name="application_tx_bytes" translatable="false">Uploaded data</string>

    <!-- Notification card strings -->
    <string name="notification_application_icon_description" translatable="false">Application icon</string>

    <!-- Preferences strings -->
    <string name="advanced_settings">Advanced settings</string>
    <string name="enable_network_monitoring">Enable network monitoring</string>
    <string name="disable_network_monitoring">Disable network monitoring</string>
    <string name="clean_up_notifications_journal">Clean up notifications journal</string>

    <!-- Application settings strings -->
    <string name="application_settings_toolbar_title">Advanced settings</string>

    <string name="threshold_preference_category">Threshold</string>
    <string name="deviation_preference_category">Deviation</string>
    <string name="reset_settings_preference_category">Reset settings</string>

    <string name="threshold_preference_key" translatable="false">threshold_preference</string>
    <string name="threshold_preference_title">TX bytes threshold</string>

    <string name="deviation_preference_key" translatable="false">deviation_preference</string>
    <string name="deviation_preference_title">Max bytes rate deviation</string>

    <string name="learning_iterations_preference_key" translatable="false">learning_iterations_preference</string>
    <string name="learning_iterations_preference_title">Learning iterations</string>

    <string name="reset_stats_preference_key" translatable="false">reset_stats</string>
    <string name="reset_stats_preference_title">Reset stats</string>

    <string name="reset_settings_preference_key" translatable="false">reset_settings</string>
    <string name="reset_settings_preference_title">Reset to default settings</string>

    <string name="reset_network_usage_string">Network usage stats reset</string>
    <string name="reset_settings_string">Settings reset</string>
</resources>