<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/threshold_preference_category">

        <EditTextPreference
            app:key="@string/threshold_preference_key"
            app:title="@string/threshold_preference_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/deviation_preference_category">

        <EditTextPreference
            app:key="@string/deviation_preference_key"
            app:title="@string/deviation_preference_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="@string/learning_iterations_preference_key"
            app:title="@string/learning_iterations_preference_title"
            app:useSimpleSummaryProvider="true" />

        <Preference
            app:key="@string/reset_stats_preference_key"
            android:title="@string/reset_stats_preference_title" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/reset_settings_preference_category">

        <Preference
            app:key="@string/reset_settings_preference_key"
            android:title="@string/reset_settings_preference_title" />

    </PreferenceCategory>

</PreferenceScreen>